--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,19 @@
-<h1>Welcome to the Homepage</h1>
+<div id="page-content">
+  <div class="container" id="home-container">
+    <div class="p-5 mb-4 bg-light rounded-3 text-center text-white" id="jumbotron">
+      <div class="container-fluid py-5">
+        <h1 class="display-5 fw-bold">Alpha Blog</h1>
+        <p class="lead"> this is a simpple hero unit</p>
+        <hr class="my-4">
+        <p>it uses utility classes for typography and spacng</p>
+        <a class="btn btn-success btn-lg" href="#" role="button">Sign up!</a>
+      </div>
+    </div>
+  </div>
+</div>
 
-<%= link_to 'Articles listing', articles_path %>
-<%= link_to 'About page', about_path %>
+<footer id="sticky-footer" class="py-4 bg-black text-white">
+  <div class="container text-center">
+    <small>Copyright &copy; <%= link_to "Google", "https://www.google.com",class: "text-white" %></small>
+  </div>
+</footer>
