--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div id="page-content">
+<div class="page-content">
   <div class="container" id="home-container">
     <div class="p-5 mb-4 bg-light rounded-3 text-center text-white" id="jumbotron">
       <div class="container-fluid py-5">
