Add users create action

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
       <p class="lead"> this is a simpple hero unit</p>
       <hr class="my-4">
       <p>it uses utility classes for typography and spacng</p>
-      <a class="btn btn-success btn-lg" href="#" role="button">Sign up!</a>
+      <%= link_to 'Sign up!', signup_url, class: "btn btn-success btn-lg" %>
     </div>
   </div>
 </div>
