--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -26,7 +26,7 @@
         <br>
         <div class="form-group row justify-content-center">
           <div class="col-3">
-            <%= f.submit "Sign up", class: "btn btn-outline-light btn-lg" %>
+            <%= f.submit (@user.new_record? ? "Sign up" : "Update account"), class: "btn btn-outline-light btn-lg" %>
           </div>
         </div>
       <% end %>
