--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,7 +4,10 @@
     <div class="col-8 mt-4">
       <div class="card text-center shadow mb-5 bg-white rounded">
         <div class="card-header fst-italic">
-          by <%= @article.user.username if @article.user %>
+          <% if @article.user %>
+            by <%= @article.user.username %>
+            <%= link_to gravatar_for(@article.user), users_path(@article.user) %>
+          <% end %>
         </div>
         <div class="card-body">
           <p class="card-text text-start"><%= simple_format(@article.description) %></p>
