--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,13 @@
 <h1 class="text-center mt-4">Listing all articles</h1>
 
+<div class="flickr_pagination">
+  <%= will_paginate @articles, :container => false %>
+</div>
+
 <%= render 'articles/article' %>
 
+<div class="flickr_pagination m-5">
+  <%= will_paginate @articles, :container => false %>
+</div>
+
+<br>
