--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -11,7 +11,7 @@
         </div>
         <div class="card-body">
           <p class="card-text text-start"><%= simple_format(@article.description) %></p>
-          <% if logged_in? && @article.user == current_user %>
+          <% if logged_in? && (@article.user == current_user || current_user.admin?) %>
             <%= link_to 'Edit', edit_article_path(@article), class: "btn btn-outline-info" %>
             <%= link_to 'Delete', article_path(@article), method: :delete, :onclick => "return confirm('Are you sure?')", class: "btn btn-outline-danger" %>
           <% end %>
