--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -17,6 +17,16 @@
           </div>
         </div>
         <br>
+        <div class="form-group row">
+          <%= f.label :category, class: "col-2 col-form-label text-light" %>
+          <div class="col-10">
+            <%= f.collection_select(:category_id, Category.all, :id, :name,
+                                    {:prompt => "Make your selection from the list below (can be empty)"},
+                                    { multiple: true, size: 3, class: "form-select" }
+                ) %>
+          </div>
+        </div>
+        <br>
         <div class="form-group row justify-content-center">
           <div class="col-3">
             <%= f.submit class: "btn btn-outline-light btn-lg" %>
