Add category to template

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -54,6 +54,10 @@ body {
   bottom: 0;
 }
 
+a.badge {
+  text-decoration: none;
+}
+
 /* Pagination styling */
 .flickr_pagination {
   text-align: center;
