--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -8,6 +8,11 @@
             by <%= @article.user.username %>
             <%= link_to gravatar_for(@article.user), users_path(@article.user) %>
           <% end %>
+          <% if @article.categories.any? %>
+            <div class="mt-2">
+              <%= render @article.categories %>
+            </div>
+          <% end %>
         </div>
         <div class="card-body">
           <p class="card-text text-start"><%= simple_format(@article.description) %></p>
