--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -12,6 +12,7 @@
           <div class="card-body">
             <h5 class="card-title">
               <%= link_to category.name, category_path(category), class: "text-success" %>
+              <p class="card-text mt-2"><%= pluralize(category.articles.count, "article") %></p>
             </h5>
           </div>
           <div class="card-footer text-muted">
